[gd_scene load_steps=5 format=3 uid="uid://b5hc3d6okkvna"]

[ext_resource type="Script" path="res://scenes/interface/loadout_menu.gd" id="1_k8k2o"]
[ext_resource type="Texture2D" uid="uid://1knxlxav152n" path="res://textures/paint_gun_icon.png" id="1_ujxe0"]
[ext_resource type="Texture2D" uid="uid://cdc0fdaxdrjh6" path="res://textures/minigun_icon.png" id="2_h5ryv"]
[ext_resource type="Texture2D" uid="uid://cxxkkfdhttxv7" path="res://textures/sniper_icon.png" id="3_slx1k"]

[node name="LoadoutMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_k8k2o")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 160
theme_override_constants/margin_top = 80
theme_override_constants/margin_right = 160
theme_override_constants/margin_bottom = 80
metadata/_edit_lock_ = true

[node name="Panel" type="Panel" parent="MarginContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 15

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/Panel/MarginContainer"]
layout_mode = 2

[node name="Loadout" type="Label" parent="MarginContainer/Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Loadout"

[node name="HSeparator" type="HSeparator" parent="MarginContainer/Panel/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Primary" type="Label" parent="MarginContainer/Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Primary
"

[node name="PrimaryContainer" type="HBoxContainer" parent="MarginContainer/Panel/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="PaintgunButton" type="TextureButton" parent="MarginContainer/Panel/MarginContainer/VBoxContainer/PrimaryContainer"]
layout_mode = 2
texture_normal = ExtResource("1_ujxe0")

[node name="MinigunButton" type="TextureButton" parent="MarginContainer/Panel/MarginContainer/VBoxContainer/PrimaryContainer"]
layout_mode = 2
texture_normal = ExtResource("2_h5ryv")

[node name="SniperButton" type="TextureButton" parent="MarginContainer/Panel/MarginContainer/VBoxContainer/PrimaryContainer"]
layout_mode = 2
texture_normal = ExtResource("3_slx1k")

[connection signal="pressed" from="MarginContainer/Panel/MarginContainer/VBoxContainer/PrimaryContainer/PaintgunButton" to="." method="_on_paintgun_button_pressed"]
[connection signal="pressed" from="MarginContainer/Panel/MarginContainer/VBoxContainer/PrimaryContainer/MinigunButton" to="." method="_on_minigun_button_pressed"]
[connection signal="pressed" from="MarginContainer/Panel/MarginContainer/VBoxContainer/PrimaryContainer/SniperButton" to="." method="_on_sniper_button_pressed"]
